--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,15 @@
 .header {
     z-index: 1;
     position: relative;
+    width: 100%;
     height: 80px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #000;
-    padding: 0 104px;
+    margin: 0;
+    padding: 0;
 }
 
 .header__title {
@@ -16,6 +18,6 @@
     font-size: 20px;
     line-height: 24px;
     font-weight: 700;
-    padding: 0;
+    padding: 0 0 0 104px;
     margin: 0;
 }
