--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,7 @@
 .main {
     z-index: 1;
     position: relative;
+    width: 100%;
     display: flex;
     flex-flow: column nowrap;
     padding: 0;
@@ -9,11 +10,13 @@
 }
 
 .main__group {
-    
+
 }
 
 .main__group_top {
-    width: 1440px;
+    z-index: 0;
+    position: relative;
+    width: 100%;
     height: 576px;
 }
 
