--- a/src/components/Main/SearchForm/SearchForm.css
+++ b/src/components/Main/SearchForm/SearchForm.css
@@ -35,18 +35,53 @@
 }
 
 .search__form {
+    z-index: 1;
+    position: relative;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
+    align-items: center;
     width: 608px;
     height: 64px;
     margin: 88px 0 0 0;
 }
 
 .search__form-input {
+    z-index: 1;
+    position: relative;
+    box-sizing: border-box;
     width: 100%;
-    height: 22px;
+    height: 100%;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000;
+    border: 1px #d1d2d6 solid;
+    border-radius: 40px;
+    text-indent: 24px;
+    margin: 0;
+    padding: 0;
+}
+
+.search__form-inpt::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
     color: #b6bcbf;
 }
 
-.search__form-button {}
+.search__form-button {
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 168px;
+    height: 100%;
+    background: #2f71e5;
+    color: #fff;
+    border: none;
+    border-radius: 40px;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+}
