--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -9,10 +9,6 @@
     background: #fff;
 }
 
-.main__group {
-
-}
-
 .main__group_top {
     z-index: 0;
     position: relative;
@@ -21,6 +17,10 @@
 }
 
 .main__group_bot {
+    z-index: 0;
+    position: relative;
+    width: 100%;
+    height: 1598px;
 }
 
 .main__img {
