--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,14 @@
 .header {
-    z-index: 1;
+    z-index: 2;
     position: relative;
     width: 100%;
     height: 80px;
+    color: #fff;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #545454;
     margin: 0;
     padding: 0;
 }
