--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -10,14 +10,14 @@
 }
 
 .main__group_top {
-    z-index: 0;
+    z-index: 1;
     position: relative;
     width: 100%;
     height: 576px;
 }
 
 .main__group_bot {
-    z-index: 0;
+    z-index: 1;
     position: relative;
     width: 100%;
     height: 1598px;
@@ -26,7 +26,10 @@
 .main__img {
     z-index: 0;
     position: absolute;
-    width: inherit;
-    height: 576px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     align-self: center;
+    object-fit: cover;
 }
