--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,8 @@
 .app {
     z-index: 1;
     position:relative;
-    width: 100%;
+    width: 1440px;
+    margin: 0 auto;
     display: flex;
     flex-flow: column nowrap;
     align-content: center;
