--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,6 @@
     position: relative;
     width: 100%;
     height: 80px;
-    color: #fff;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -16,9 +15,14 @@
 .header__title {
     width: 200px;
     height: 24px;
+    color: #fff;
     font-size: 20px;
     line-height: 24px;
     font-weight: 700;
     padding: 0 0 0 104px;
     margin: 0;
+}
+
+.header__title_alt {
+    color: #1a1b22;
 }
