--- a/src/components/Main/NewsCardList/NewsCardList.css
+++ b/src/components/Main/NewsCardList/NewsCardList.css
@@ -2,7 +2,6 @@
     z-index: 1;
     position: relative;
     width: 100%;
-    height: 974px;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -39,4 +38,42 @@
     background-color: #e8e8e8;
     margin: 0 auto 80px auto;
     padding: 0;
+}
+
+.card-list__message-group {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0 auto;
+}
+
+.card-list__not-found-img{
+    width: 82.5px;
+    height: 82.5px;
+    position: relative;
+    padding: 0;
+    margin: 86px 0 0 0;
+}
+
+.card-list__message-title {
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 30px;
+    text-align: center;
+    padding: 0;
+    margin: 31.5px 0 0 0;
+}
+
+.card-list__message {
+    width: 100%;
+    height: 24px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    color: #1a1b22;
+    padding: 0;
+    margin: 16px 0 80px 0;
 }
