--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     font-family: 'Roboto', 'Inter', 'Times New Roman', Times, serif;
 }
