--- a/src/components/Main/NewsCardList/NewsCard/NewsCard.css
+++ b/src/components/Main/NewsCardList/NewsCard/NewsCard.css
@@ -5,6 +5,7 @@
     height: 576px;
     display: flex;
     flex-flow: column nowrap;
+    color: #1A1B22;
     border: none;
     border-radius: 4px;
     margin: 0;
@@ -59,6 +60,8 @@
     font-weight: 400;
     font-size: 26px;
     line-height: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin: 12px 0 0 0;
 }
 
@@ -88,5 +91,8 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
+    text-decoration: none;
+    color: #1A1B22;
+    cursor: pointer;
     margin: 18px 0 24px 0;
 }
