--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -6,11 +6,7 @@
     border-bottom-color: #888;
     border-radius: 50%;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    margin: 0;
     animation: spin .75s infinite linear;
 }
 
