--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,7 +1,7 @@
 .app {
     z-index: 1;
     position:relative;
-    width: 1440px;
+    width: 100vw;
     margin: 0 auto;
     display: flex;
     flex-flow: column nowrap;
