--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -72,6 +72,7 @@
     min-width: 176px;
     height: 48px;
     color: #fff;
+    cursor: default;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -97,11 +98,13 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
+    cursor: pointer;
     padding: 0;
     margin: 0;
 }
 
 .nav__text_profile {
+    cursor: default;
     padding: 0 0 0 16px;
     margin: 0 15px 0 0;
 }
@@ -128,6 +131,7 @@
     top: 0;
     min-width: 18px;
     height: 16px;
+    cursor: pointer;
     padding: 0 16px 0 0;
     margin: 0;
 }
