--- a/src/components/Main/SavedNews/SavedNews.css
+++ b/src/components/Main/SavedNews/SavedNews.css
@@ -47,7 +47,7 @@
 }
 
 .news__grid {
-  width: 1440px;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, auto));
   grid-template-rows: repeat(auto-fill, minmax(576px, auto));
