--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,21 @@
 .app {
     z-index: 1;
     position:relative;
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     flex-flow: column nowrap;
     align-content: center;
+}
+
+@media screen and (min-width: 1440px) {
+    
+}
+
+@media screen and (max-width: 768px) {
+    
+}
+
+@media screen and (max-width: 320px) {
+    
 }
