--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -32,3 +32,15 @@
     align-self: center;
     object-fit: cover;
 }
+
+@media screen and (min-width: 1440px) {
+    
+}
+
+@media screen and (max-width: 768px) {
+    
+}
+
+@media screen and (max-width: 320px) {
+    
+}
