--- a/src/components/Main/SavedNews/SavedNews.css
+++ b/src/components/Main/SavedNews/SavedNews.css
@@ -49,9 +49,9 @@
 .news__grid {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, auto));
+  grid-template-columns: repeat(3, minmax(400px, auto));
   grid-template-rows: repeat(auto-fill, minmax(576px, auto));
-  grid-gap: 16px;
+  gap: 16px;
   align-items: center;
   justify-content: center;
   background: #f5f6f7;
