--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body {
+    max-width: 100vw;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     margin: 0;
+    padding: 0 auto;
     font-family: 'Roboto', 'Inter', 'Times New Roman', Times, serif;
 }
