--- a/src/components/Main/NewsCardList/NewsCard/NewsCard.css
+++ b/src/components/Main/NewsCardList/NewsCard/NewsCard.css
@@ -5,9 +5,10 @@
     height: 576px;
     display: flex;
     flex-flow: column nowrap;
+    background-color: #fff;
     color: #1A1B22;
     border: none;
-    border-radius: 4px;
+    border-radius: 25px;
     margin: 0;
 }
 
@@ -15,7 +16,35 @@
     width: 400px;
     height: 272px;
     object-fit: cover;
+    border-radius: 25px 25px 0 0;
     margin: 0;
+}
+
+.card__category-group {
+    z-index: 3;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    min-width: 44px;
+    height: 40px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 0;
+    padding: 0;
+}
+
+.card__category-text {
+    color: #1A1B22;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    margin: 0 22px;
+    padding: 0;
 }
 
 .card__bookmark-group {
@@ -34,6 +63,12 @@
     border-radius: 8px;
     margin: 0;
     padding: 0;
+}
+
+.card__trash-img {
+    width: 40px;
+    height: 40px;
+    background: url('../../../../assets/trashcan.svg') center no-repeat;
 }
 
 .card__bookmark-img {
@@ -83,12 +118,17 @@
     opacity: 1;
 }
 
+.card__bookmark-group .card__trash-img:hover {
+    background-image: url('../../../../assets/trashcan-dark.svg');
+}
+
 .card__info {
-    width: 400px;
+    width: 352px;
     height: 304px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
+    margin: 0 24px 0;
 }
 
 .card__title {
@@ -115,8 +155,8 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
-    overflow: hidden;
     text-overflow: ellipsis;
+    overflow: hidden;
     margin: 16px 0 0 0;
 }
 
