--- a/src/components/Main/SavedNews/SavedNews.css
+++ b/src/components/Main/SavedNews/SavedNews.css
@@ -35,7 +35,7 @@
   font-weight: 400;
   color: #1a1b22;
   padding-left: 104px;
-  margin: 30px 0 0 0;
+  margin: 30px 0 56px 0;
 }
 
 .news__bold {
@@ -47,7 +47,7 @@
 }
 
 .news__grid {
-  width: 100%;
+  width: fit-content;
   display: grid;
   grid-template-columns: repeat(3, minmax(400px, auto));
   grid-template-rows: repeat(auto-fill, minmax(576px, auto));
@@ -55,6 +55,6 @@
   align-items: center;
   justify-content: center;
   background: #f5f6f7;
-  padding: 0;
-  margin: 30px auto 0 auto;
+  padding: 62px 104px;
+  margin: 0 auto;
 }
