--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -24,7 +24,7 @@
     margin: auto;
   }
 
-  .modal__success {
+  .modal__type_success {
     width: 100%;
     position: relative;
     display: flex;
