--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,21 +1,40 @@
 .app {
     z-index: 1;
-    position:relative;
     width: 100%;
+    max-width: 1440px;
+    min-width: 320px;
+    box-sizing: border-box;
+    position:relative;
     margin: 0 auto;
     display: flex;
     flex-flow: column nowrap;
     align-content: center;
 }
 
-@media screen and (min-width: 1440px) {
-    
+::before,::after {
+    box-sizing: border-box;
 }
 
-@media screen and (max-width: 768px) {
-    
+@media  screen and (min-width: 1442px) {
+    .app {
+        min-width: 1441px;
+    }
 }
 
-@media screen and (max-width: 320px) {
-    
+@media screen and (max-width: 1441px) {
+    .app {
+        max-width: 100vw;
+    }
+}
+
+@media screen and (max-width: 769px) {
+    .app {
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .app {
+        max-width: 425px;
+    }
 }
