--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,26 +3,40 @@
     position: relative;
     width: 100%;
     height: 80px;
+    box-sizing: border-box;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #545454;
     margin: 0;
-    padding: 0;
+    padding: 0 104px;
 }
 
 .header__title {
     width: 200px;
-    height: 24px;
     color: #fff;
+    font-family: 'Roboto Slab';
     font-size: 20px;
     line-height: 24px;
     font-weight: 700;
-    padding: 0 0 0 104px;
-    margin: 0;
+    margin: 0 auto 0 0;
 }
 
 .header__title_alt {
     color: #1a1b22;
+}
+
+@media screen and (max-width: 1025px) {
+    .header {
+        height: 66px;
+        padding: 0 40px;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .header {
+        height: 56px;
+        justify-content: none;
+        padding: 0 16px;
+    }
 }
