--- a/src/components/Main/SearchForm/SearchForm.css
+++ b/src/components/Main/SearchForm/SearchForm.css
@@ -14,6 +14,7 @@
     z-index: 1;
     width: 608px;
     height: 128px;
+    font-family: 'Roboto Slab';
     font-weight: 700;
     font-size: 60px;
     line-height: 64px;
@@ -27,6 +28,7 @@
     z-index: 1;
     width: 608px;
     height: 24px;
+    font-family: 'Roboto';
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
@@ -52,6 +54,7 @@
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    font-family: 'Roboto';
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
@@ -63,14 +66,15 @@
     padding: 0;
 }
 
-.search__form-inpt::placeholder {
+.search__form-input::placeholder {
+    font-family: 'Roboto';
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
-    color: #b6bcbf;
+    color: #B6BCBF;
 }
 
-.search__form-inpt:focus-visible {
+.search__form-input:focus-visible {
     border-color: #fff;
 }
 
@@ -81,6 +85,10 @@
     right: 0;
     width: 168px;
     height: 100%;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
     background: #2f71e5;
     color: #fff;
     border: none;
@@ -100,6 +108,66 @@
     background: #2A65CC;
 }
 
-.search__form-button:hover {
-    background: #e8e8e8;
+@media screen and (max-width: 769px) {
+    .search__title {
+        width: 452px;
+        height: 80px;
+        text-align: left;
+        font-size: 36px;
+        line-height: 40px;
+        margin: 38px 0 0 0;
+    }
+
+    .search__description {
+        width: 452px;
+        height: 48px;
+        margin: 16px 0 0 0;
+    }
+
+    .search__form {
+        width: 452px;
+        height: 56px;
+        margin: 48px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .search {
+        width: 100%;
+        height: 480px;
+    }
+    .search__title {
+        width: calc(100% - 32px);
+        height: 80px;
+        margin: 30px 0 0 0;
+    }
+
+    .search__description {
+        width: calc(100% - 32px);
+        height: 72px;
+        margin: 16px 0 0 0;
+    }
+
+    .search__form {
+        width: calc(100% - 32px);
+        height: 128px;
+        flex-flow: column nowrap;
+        margin: 122px 0 32px 0;
+    }
+
+    .search__form-input {
+        width: 100%;
+        height: 56px;
+        margin: 0;
+    }
+
+    .search__form-button {
+        width: 100%;
+        height: 56px;
+        position: relative;
+        top: 0;
+        left: 0;
+        padding: 0;
+        margin: 16px 0 0 0;
+    }
 }
