--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,160 +1,193 @@
 .modal {
-    z-index: 2;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    transition: opacity 0.5s, visibility 0.5s;
-  }
-  
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.5s, visibility 0.5s;
+}
+
+.modal_mobile {
+  background-color: rgba(0, 0, 0, 0);
+  transition: none;
+}
+
+.modal__container {
+  z-index: 1;
+  width: 430px;
+  height: 380px;
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  background-color: #fff;
+  border-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  margin: auto;
+}
+
+.modal___container_mobile {
+  transition: top 0.3s, left 0.3s, width 0.3s, height 0.3s;
+}
+
+.modal__type_success {
+  height: 182px;
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.modal__title {
+  width: 358px;
+  height: 32px;
+  font-family: "Roboto";
+  font-size: 24px;
+  line-height: 100%;
+  font-weight: 900;
+  margin: 0 auto 24px 0;
+}
+
+.modal__title_success {
+  width: 315px;
+  height: 56px;
+  font-family: "Roboto";
+  font-size: 24px;
+  line-height: 100%;
+  font-weight: 900;
+  margin: 43px 79px 0 36px;
+}
+
+.modal__close-button {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  background: url("../../assets/active-close-button.svg") center/cover no-repeat;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+
+.modal__close-button:hover {
+  opacity: 0.6;
+}
+
+.modal__form {
+  width: 358px;
+  border: none;
+  margin: 34px 36px 28px;
+}
+
+.form {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+}
+
+.form__label {
+  width: 358px;
+  height: 47px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  color: #2f71e5;
+  font-family: "Inter";
+  font-size: 12px;
+  line-height: 100%;
+  font-weight: 400;
+  margin: 0 0 31px;
+}
+
+.form__input {
+  position: relative;
+  z-index: 2;
+  width: 358px;
+  height: 33px;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  color: #000;
+  background-color: #fff;
+  font-family: "Inter";
+  font-size: 14px;
+  line-height: 100%;
+  font-weight: 400;
+  padding: 0;
+  margin: 8px 0 0;
+}
+
+.form__submit {
+  width: 358px;
+  height: 64px;
+  font-family: "Roboto";
+  font-size: 18px;
+  line-height: 125%;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 50px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 0;
+  margin: 8px 0 16px 0;
+}
+
+.form__submit_success {
+  width: 228px;
+  height: 18px;
+  font-family: "Inter";
+  font-size: 18px;
+  line-height: 100%;
+  font-weight: 400;
+  text-wrap: nowrap;
+  text-decoration: none;
+  color: #2f71e5;
+  padding: 0;
+  margin: 14px 166px 51px 36px;
+}
+
+.form__link {
+  width: 73px;
+  height: 20px;
+  text-wrap: nowrap;
+  text-decoration: none;
+  color: #2f71e5;
+  padding: 0;
+  margin: 0;
+}
+
+.form__text {
+  color: rgba(0, 0, 0, 0.5);
+  font-family: "Inter";
+  font-size: 14px;
+  line-height: 100%;
+  font-weight: 400;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.form__button-group {
+  width: 358px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  margin: 0;
+}
+
+@media screen and (max-width: 426px) {
   .modal__container {
-    z-index: 1;
-    width: 430px;
-    position: relative;
-    display: flex;
-    flex-flow: column nowrap;
-    background-color: #fff;
-    border-radius: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    margin: auto;
-  }
-
-  .modal__type_success {
     width: 100%;
-    position: relative;
-    display: flex;
-    flex-flow: column nowrap;
+    height: 100%;
+    position: fixed;
+    top: 56px;
+    left: 0;
   }
-  
-  .modal__title {
-    width: 358px;
-    height: 32px;
-    font-family: "Roboto";
-    font-size: 24px;
-    line-height: 100%;
-    font-weight: 900;
-    margin: 0 auto 24px 0;
-  }
-  
-  .modal__close-button {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: -40px;
-    right: -40px;
-    background: url("../../assets/active-close-button.svg") center/cover no-repeat;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .modal__close-button:hover {
-    opacity: 0.6;
-  }
-  
-  .modal__form {
-    width: 358px;
-    border: none;
-    margin: 34px 36px 28px;
-  }
-  
-  .form {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-  }
-  
-  .form__label {
-    width: 358px;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    color: #2f71e5;
-    font-family: "Inter";
-    font-size: 12px;
-    line-height: 100%;
-    font-weight: 400;
-    margin: 0 0 31px;
-  }
-  
-  .form__input {
-    position: relative;
-    z-index: 2;
-    width: 358px;
-    height: 47px;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    color: #000;
-    background-color: #fff;
-    font-family: "Inter";
-    font-size: 14px;
-    line-height: 100%;
-    font-weight: 400;
-    padding: 0;
-    margin: 8px 0 0;
-  }
-  
-  .form__submit {
-    width: 358px;
-    height: 64px;
-    font-family: "Roboto";
-    font-size: 18px;
-    line-height: 125%;
-    font-weight: 500;
-    cursor: pointer;
-    border-radius: 50px;
-    border: none;
-    background-color: rgba(0, 0, 0, 0.3);
-    padding: 0;
-    margin: 8px 0 16px 0;
-  }
-
-  .form__submit_success {
-    width: 228px;
-    height: 18px;
-    font-family: "Inter";
-    font-size: 18px;
-    line-height: 100%;
-    font-weight: 400;
-    text-wrap: nowrap;
-    text-decoration: none;
-    color: #2f71e5;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .form__link {
-    width: 73px;
-    height: 20px;
-    text-wrap: nowrap;
-    text-decoration: none;
-    color: #2f71e5;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .form__text {
-    color: rgba(0, 0, 0, 0.5);
-    font-family: "Inter";
-    font-size: 16px;
-    line-height: 125%;
-    font-weight: 700;
-    cursor: pointer;
-    border: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .form__button-group {
-    width: 358px;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    margin: 0;
-  }
+}
   
