--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,31 @@
 body {
-    max-width: 100vw;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
+    width: 100vw;
     margin: 0;
     padding: 0 auto;
     font-family: 'Roboto', 'Inter', 'Times New Roman', Times, serif;
+    overflow-x: hidden;
+}
+
+@media screen and (min-width: 1442px) {
+    body {
+        min-width: 1441px;
+    }
+}
+
+@media screen and (max-width: 1441px) {
+    body {
+        max-width: 1440px;
+    }
+}
+
+@media screen and (max-width: 769px) {
+    body {
+        max-width: 768px;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    body {
+        max-width: 425px;
+    }
 }
